--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,10 @@ html, body, #root, .canvas-container {
   padding: 0;
   overflow: hidden;
 }
+.room-container {
+  width: 70vw;
+  height: 70vh;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
